Fix overflow

--- a/public/style.css
+++ b/public/style.css
@@ -8,7 +8,8 @@
 	height: 90%;
 	width: 100%;
 	max-width: 800px;
-	overflow: auto;
+	overflow-y: auto;
+	overflow-x: hidden;
 }
 
 body{
